@@ -8,8 +8,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 
@@ -26,9 +26,6 @@ import org.gradle.api.capabilities.Capability;
 import org.gradle.api.initialization.IncludedBuild;
 import org.gradle.api.internal.artifacts.DefaultModuleVersionIdentifier;
 import org.gradle.api.internal.artifacts.dependencies.DefaultExternalModuleDependency;
-import org.gradle.api.internal.artifacts.dependencies.DefaultProjectDependency;
-import org.gradle.api.internal.project.ProjectInternal;
-import org.gradle.api.internal.tasks.DefaultTaskDependencyFactory;
 import org.gradle.api.provider.ListProperty;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetContainer;
@@ -96,8 +93,7 @@ public class DependencyUtils {
             projectDependency = getProjectExtensionDependencyOrNull(
                     project,
                     componentId.getProjectPath(),
-                    componentId.getBuild().getName());
-
+                    componentId.getBuild().getBuildPath());
             if (projectDependency != null)
                 return projectDependency;
         }
@@ -198,10 +194,10 @@ public class DependencyUtils {
     public static ExtensionDependency<?> getProjectExtensionDependencyOrNull(
             Project project,
             String projectPath,
-            @Nullable String buildName) {
+            @Nullable String buildPath) {
         Project extensionProject = project.getRootProject().findProject(projectPath);
         if (extensionProject == null) {
-            IncludedBuild extProjIncludedBuild = ToolingUtils.includedBuild(project, buildName);
+            IncludedBuild extProjIncludedBuild = ToolingUtils.includedBuild(project, buildPath);
             if (extProjIncludedBuild instanceof IncludedBuildInternal) {
                 extensionProject = ToolingUtils
                         .includedBuildProject((IncludedBuildInternal) extProjIncludedBuild, projectPath);
@@ -231,7 +227,6 @@ public class DependencyUtils {
         if (extensionConfiguration != null) {
             final String deploymentProjectPath = ConfigurationUtils.getDeploymentModule(extensionConfiguration).get();
             deploymentProject = ToolingUtils.findLocalProject(extensionProject, deploymentProjectPath);
-
             if (deploymentProject == null) {
                 throw new GradleException("Cannot find deployment project for extension " + extensionArtifactId + " at path "
                         + deploymentProjectPath);
@@ -239,7 +234,6 @@ public class DependencyUtils {
         } else if (extensionDescriptor.containsKey(BootstrapConstants.PROP_DEPLOYMENT_ARTIFACT)) {
             final ArtifactCoords deploymentArtifact = ArtifactCoords
                     .fromString(extensionDescriptor.getProperty(BootstrapConstants.PROP_DEPLOYMENT_ARTIFACT));
-
             deploymentProject = ToolingUtils.findLocalProject(project, deploymentArtifact);
 
             if (deploymentProject == null) {
@@ -360,11 +354,9 @@ public class DependencyUtils {
     public static Dependency createDeploymentDependency(
             DependencyHandler dependencyHandler,
             ExtensionDependency<?> dependency) {
-        if (dependency instanceof ProjectExtensionDependency) {
-            ProjectExtensionDependency ped = (ProjectExtensionDependency) dependency;
+        if (dependency instanceof ProjectExtensionDependency ped) {
             return createDeploymentProjectDependency(dependencyHandler, ped);
-        } else if (dependency instanceof ArtifactExtensionDependency) {
-            ArtifactExtensionDependency aed = (ArtifactExtensionDependency) dependency;
+        } else if (dependency instanceof ArtifactExtensionDependency aed) {
             return createArtifactDeploymentDependency(dependencyHandler, aed);
         }
 
@@ -377,11 +369,8 @@ public class DependencyUtils {
                     ped.getDeploymentModule().getGroup().toString(),
                     ped.getDeploymentModule().getName(),
                     ped.getDeploymentModule().getVersion().toString());
-        } else if (ped.getDeploymentModule() instanceof ProjectInternal) {
-            return handler.create(new DefaultProjectDependency((ProjectInternal) ped.getDeploymentModule(), true,
-                    DefaultTaskDependencyFactory.withNoAssociatedProject()));
         } else {
-            return handler.create(handler.project(Collections.singletonMap("path", ped.getDeploymentModule().getPath())));
+            return handler.create(handler.project(Map.of("path", ped.getDeploymentModule().getPath())));
         }
     }
 
@@ -390,5 +379,18 @@ public class DependencyUtils {
         return handler.create(dependency.getDeploymentModule().getGroupId() + ":"
                 + dependency.getDeploymentModule().getArtifactId() + ":"
                 + dependency.getDeploymentModule().getVersion());
+    }
+
+    public static ArtifactKey getKey(ResolvedArtifact artifact) {
+        return ArtifactKey.of(artifact.getModuleVersion().getId().getGroup(), artifact.getName(),
+                artifact.getClassifier() == null ? ArtifactCoords.DEFAULT_CLASSIFIER : artifact.getClassifier(),
+                artifact.getExtension() == null ? ArtifactCoords.TYPE_JAR : artifact.getExtension());
+    }
+
+    public static ArtifactCoords getArtifactCoords(ResolvedArtifact artifact) {
+        return ArtifactCoords.of(artifact.getModuleVersion().getId().getGroup(), artifact.getName(),
+                artifact.getClassifier() == null ? ArtifactCoords.DEFAULT_CLASSIFIER : artifact.getClassifier(),
+                artifact.getExtension() == null ? ArtifactCoords.TYPE_JAR : artifact.getExtension(),
+                artifact.getModuleVersion().getId().getVersion());
     }
 }
