@@ -89,6 +89,7 @@ public class BeanDeployment {
     private final List<DecoratorInfo> decorators;
 
     private final List<ObserverInfo> observers;
+    private Set<MethodInfo> observerAndProducerMethods;
 
     private final Set<InvokerInfo> invokers;
 
@@ -179,7 +180,7 @@ public class BeanDeployment {
         qualifierNonbindingMembers = new HashMap<>();
         qualifiers = findQualifiers();
         for (QualifierRegistrar registrar : builder.qualifierRegistrars) {
-            for (Map.Entry<DotName, Set<String>> entry : registrar.getAdditionalQualifiers().entrySet()) {
+            for (Entry<DotName, Set<String>> entry : registrar.getAdditionalQualifiers().entrySet()) {
                 DotName dotName = entry.getKey();
                 ClassInfo classInfo = getClassByName(getBeanArchiveIndex(), dotName);
                 if (classInfo != null) {
@@ -187,6 +188,7 @@ public class BeanDeployment {
                     if (nonbindingMembers == null) {
                         nonbindingMembers = Collections.emptySet();
                     }
+                    validateQualifier(classInfo, nonbindingMembers);
                     qualifierNonbindingMembers.put(dotName, nonbindingMembers);
                     qualifiers.put(dotName, classInfo);
                 }
@@ -250,7 +252,7 @@ public class BeanDeployment {
     }
 
     ContextRegistrar.RegistrationContext registerCustomContexts(List<ContextRegistrar> contextRegistrars) {
-        io.quarkus.arc.processor.ContextRegistrar.RegistrationContext registrationContext = new io.quarkus.arc.processor.ContextRegistrar.RegistrationContext() {
+        ContextRegistrar.RegistrationContext registrationContext = new ContextRegistrar.RegistrationContext() {
             @Override
             public <V> V put(Key<V> key, V value) {
                 return buildContext.put(key, value);
@@ -286,7 +288,7 @@ public class BeanDeployment {
         }
     }
 
-    BeanRegistrar.RegistrationContext registerBeans(List<BeanRegistrar> beanRegistrars) {
+    RegistrationContext registerBeans(List<BeanRegistrar> beanRegistrars) {
         List<InjectionPointInfo> injectionPoints = new ArrayList<>();
         BeanDiscoveryResult beanDiscoveryResult = findBeans(
                 initBeanDefiningAnnotations(beanDefiningAnnotations.values(), stereotypes.keySet()), observers,
@@ -316,6 +318,8 @@ public class BeanDeployment {
     void init(Consumer<BytecodeTransformer> bytecodeTransformerConsumer,
             List<Predicate<BeanInfo>> additionalUnusedBeanExclusions) {
         long start = System.nanoTime();
+
+        initObserverAndProducerMethods(observers, beans);
 
         // Collect dependency resolution errors
         List<Throwable> errors = new ArrayList<>();
@@ -356,10 +360,10 @@ public class BeanDeployment {
                     TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - removalStart));
             //we need to re-initialize it, so it does not contain removed beans
             initBeanByTypeMap();
-            buildContext.putInternal(BuildExtension.Key.REMOVED_INTERCEPTORS, Collections.unmodifiableSet(removedInterceptors));
-            buildContext.putInternal(BuildExtension.Key.REMOVED_DECORATORS, Collections.unmodifiableSet(removedDecorators));
+            buildContext.putInternal(Key.REMOVED_INTERCEPTORS, Collections.unmodifiableSet(removedInterceptors));
+            buildContext.putInternal(Key.REMOVED_DECORATORS, Collections.unmodifiableSet(removedDecorators));
         }
-        buildContext.putInternal(BuildExtension.Key.REMOVED_BEANS, Collections.unmodifiableSet(removedBeans));
+        buildContext.putInternal(Key.REMOVED_BEANS, Collections.unmodifiableSet(removedBeans));
         LOGGER.debugf("Bean deployment initialized in %s ms", TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - start));
     }
 
@@ -720,17 +724,17 @@ public class BeanDeployment {
     private static Collection<AnnotationInstance> extractAnnotations(AnnotationInstance annotation,
             Map<DotName, ClassInfo> singulars, Map<DotName, ClassInfo> repeatables) {
         if (!annotation.runtimeVisible()) {
-            return Collections.emptyList();
+            return List.of();
         }
         DotName annotationName = annotation.name();
         if (singulars.get(annotationName) != null) {
-            return Collections.singleton(annotation);
+            return Set.of(annotation);
         } else if (repeatables.get(annotationName) != null) {
             // repeatable, we need to extract actual annotations
             return Annotations.onlyRuntimeVisible(Arrays.asList(annotation.value().asNestedArray()));
         } else {
             // neither singular nor repeatable, return empty collection
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
@@ -789,6 +793,15 @@ public class BeanDeployment {
     }
 
     Set<MethodInfo> getObserverAndProducerMethods() {
+        if (observerAndProducerMethods == null) {
+            throw new IllegalStateException(
+                    "getObserverAndProducerMethods() has been called but observerAndProducerMethods has not been initialized yet");
+        }
+
+        return observerAndProducerMethods;
+    }
+
+    private void initObserverAndProducerMethods(List<ObserverInfo> observers, List<BeanInfo> beans) {
         Set<MethodInfo> ret = new HashSet<>();
         for (ObserverInfo observer : observers) {
             if (!observer.isSynthetic()) {
@@ -800,7 +813,8 @@ public class BeanDeployment {
                 ret.add(bean.getTarget().get().asMethod());
             }
         }
-        return ret;
+
+        observerAndProducerMethods = Collections.unmodifiableSet(ret);
     }
 
     private boolean isRuntimeAnnotationType(ClassInfo annotationType) {
@@ -841,9 +855,42 @@ public class BeanDeployment {
             if (isExcluded(qualifierClass)) {
                 continue;
             }
+            // check that all array typed methods are @Nonbinding
+            validateQualifier(qualifierClass, null);
             qualifiers.put(qualifierClass.name(), qualifierClass);
         }
         return qualifiers;
+    }
+
+    /**
+     * Validates the qualifier for binding members which are either array or annotation-valued and throws an exception
+     * if any is found.
+     *
+     * @param qualifierClass class info of the qualifier
+     * @param nonbindingMembers collection of members we consider {@code @Nonbinding} for synthetic qualifier, null otherwise
+     */
+    private void validateQualifier(ClassInfo qualifierClass, Set<String> nonbindingMembers) {
+        for (MethodInfo mi : qualifierClass.methods()) {
+            Type returnType = mi.returnType();
+            if ((nonbindingMembers != null && !nonbindingMembers.contains(mi.name()))
+                    || (nonbindingMembers == null && mi.annotation(DotNames.NONBINDING) == null)) {
+                String problem = null;
+                if (returnType.kind().equals(Type.Kind.ARRAY)) {
+                    problem = "array";
+                } else if (returnType.kind().equals(Type.Kind.CLASS)) {
+                    ClassInfo typeClassInfo = beanArchiveImmutableIndex.getClassByName(returnType.asClassType().name());
+                    if (typeClassInfo != null && typeClassInfo.isAnnotation()) {
+                        problem = "annotation";
+                    }
+                }
+                if (problem != null) {
+                    throw new DefinitionException("Qualifier annotation '" + qualifierClass + "' contains a member '"
+                            + mi.name()
+                            + "' with " + problem
+                            + "-valued return type. All such members have to be annotated with @jakarta.enterprise.util.Nonbinding");
+                }
+            }
+        }
     }
 
     private Map<DotName, ClassInfo> findContainerAnnotations(Map<DotName, ClassInfo> annotations) {
@@ -1028,7 +1075,7 @@ public class BeanDeployment {
         NO_BEAN_CONSTRUCTOR
     }
 
-    private BeanDiscoveryResult findBeans(Collection<DotName> beanDefiningAnnotations, List<ObserverInfo> observers,
+    private BeanDiscoveryResult findBeans(Set<DotName> beanDefiningAnnotations, List<ObserverInfo> observers,
             List<InjectionPointInfo> injectionPoints, boolean jtaCapabilities) {
 
         Set<ClassInfo> beanClasses = new HashSet<>();
@@ -1363,12 +1410,12 @@ public class BeanDeployment {
             }
         }
 
-        for (Map.Entry<MethodInfo, Set<ClassInfo>> entry : syncObserverMethods.entrySet()) {
+        for (Entry<MethodInfo, Set<ClassInfo>> entry : syncObserverMethods.entrySet()) {
             registerObserverMethods(entry.getValue(), observers, injectionPoints,
                     beanClassToBean, entry.getKey(), false, observerTransformers, jtaCapabilities);
         }
 
-        for (Map.Entry<MethodInfo, Set<ClassInfo>> entry : asyncObserverMethods.entrySet()) {
+        for (Entry<MethodInfo, Set<ClassInfo>> entry : asyncObserverMethods.entrySet()) {
             registerObserverMethods(entry.getValue(), observers, injectionPoints,
                     beanClassToBean, entry.getKey(), true, observerTransformers, jtaCapabilities);
         }
@@ -1401,7 +1448,7 @@ public class BeanDeployment {
         // the whole package is indexed (otherwise we'd get a lot of warnings that
         // package-info.class couldn't be loaded during on-demand indexing)
         String packageName = beanClass.name().packagePrefix();
-        org.jboss.jandex.ClassInfo packageClass = beanArchiveImmutableIndex.getClassByName(
+        ClassInfo packageClass = beanArchiveImmutableIndex.getClassByName(
                 DotName.createSimple(packageName + ".package-info"));
         return packageClass != null && annotationStore.hasAnnotation(packageClass, DotNames.VETOED);
     }
@@ -1445,12 +1492,18 @@ public class BeanDeployment {
             List<DisposerInfo> disposers) {
         // we don't have a `BeanInfo` for the producer yet (the outcome of this method is used to build it),
         // so we need to construct its set of qualifiers manually
-        Set<AnnotationInstance> qualifiers = new HashSet<>();
-        // ignore annotations on producer method parameters -- they may be injection point qualifiers
-        for (AnnotationInstance annotation : Annotations.getAnnotations(producer.kind(), getAnnotations(producer))) {
-            qualifiers.addAll(extractQualifiers(annotation));
+        Set<AnnotationInstance> annotations = Annotations.getAnnotations(producer.kind(), getAnnotations(producer));
+        Set<AnnotationInstance> qualifiers;
+        if (!annotations.isEmpty()) {
+            qualifiers = new HashSet<>();
+            // ignore annotations on producer method parameters -- they may be injection point qualifiers
+            for (AnnotationInstance annotation : annotations) {
+                qualifiers.addAll(extractQualifiers(annotation));
+            }
+        } else {
+            qualifiers = Set.of();
         }
-        Beans.addImplicitQualifiers(qualifiers); // need to consider `@Any` (and possibly `@Default`) too
+        qualifiers = Beans.addImplicitQualifiers(qualifiers); // need to consider `@Any` (and possibly `@Default`) too
 
         List<DisposerInfo> found = new ArrayList<>();
         for (DisposerInfo disposer : disposers) {
@@ -1519,7 +1572,7 @@ public class BeanDeployment {
         }
     }
 
-    io.quarkus.arc.processor.ObserverRegistrar.RegistrationContext registerSyntheticObservers(
+    ObserverRegistrar.RegistrationContext registerSyntheticObservers(
             List<ObserverRegistrar> observerRegistrars) {
         ObserverRegistrationContextImpl context = new ObserverRegistrationContextImpl(buildContext, this);
         for (ObserverRegistrar registrar : observerRegistrars) {
@@ -1714,7 +1767,7 @@ public class BeanDeployment {
             }
         }
 
-        List<Map.Entry<String, List<BeanInfo>>> duplicateBeanIds = beans.stream()
+        List<Entry<String, List<BeanInfo>>> duplicateBeanIds = beans.stream()
                 .collect(Collectors.groupingBy(BeanInfo::getIdentifier))
                 .entrySet()
                 .stream()
@@ -1727,7 +1780,7 @@ public class BeanDeployment {
                     .append("Multiple beans with the same identifier found!\n")
                     .append("----------------------------------------------\n")
                     .append("This is an internal error. Please report a bug and attach the following listing.\n\n");
-            for (Map.Entry<String, List<BeanInfo>> entry : duplicateBeanIds) {
+            for (Entry<String, List<BeanInfo>> entry : duplicateBeanIds) {
                 error.append(entry.getKey()).append(" -> ").append(entry.getValue().size()).append(" beans:\n");
                 for (BeanInfo bean : entry.getValue()) {
                     error.append("- ").append(bean).append("\n");
@@ -1852,12 +1905,12 @@ public class BeanDeployment {
 
         @Override
         public BeanStream beans() {
-            return new BeanStream(get(BuildExtension.Key.BEANS));
+            return new BeanStream(get(Key.BEANS));
         }
 
         @Override
         public BeanStream removedBeans() {
-            return new BeanStream(get(BuildExtension.Key.REMOVED_BEANS));
+            return new BeanStream(get(Key.REMOVED_BEANS));
         }
 
     }
@@ -1900,7 +1953,7 @@ public class BeanDeployment {
     }
 
     private static class ObserverRegistrationContextImpl extends RegistrationContextImpl
-            implements io.quarkus.arc.processor.ObserverRegistrar.RegistrationContext {
+            implements ObserverRegistrar.RegistrationContext {
 
         ObserverRegistrationContextImpl(BuildContext buildContext, BeanDeployment beanDeployment) {
             super(buildContext, beanDeployment);
@@ -1918,7 +1971,7 @@ public class BeanDeployment {
 
         @Override
         public BeanStream beans() {
-            return new BeanStream(get(BuildExtension.Key.BEANS));
+            return new BeanStream(get(Key.BEANS));
         }
 
     }
@@ -1945,7 +1998,7 @@ public class BeanDeployment {
         }
 
         public BeanStream beans() {
-            return new BeanStream(get(BuildExtension.Key.BEANS));
+            return new BeanStream(get(Key.BEANS));
         }
 
     }
