@@ -113,6 +113,48 @@ public class TestRegistryClientBuilder {
         return codestartBuilder;
     }
 
+    public TestRegistryClientBuilder installExternalPlatform(ExtensionCatalog platformCatalog) {
+        // install the BOM artifact
+        final ArtifactCoords bomCoords = platformCatalog.getBom();
+        final Model bomModel = initModel(bomCoords);
+        final List<Dependency> managedDeps = bomModel.getDependencyManagement().getDependencies();
+        for (Extension ext : platformCatalog.getExtensions()) {
+            final ArtifactCoords extCoords = ext.getArtifact();
+            final Dependency runtime = new Dependency();
+            runtime.setGroupId(extCoords.getGroupId());
+            runtime.setArtifactId(extCoords.getArtifactId());
+            runtime.setVersion(extCoords.getVersion());
+            managedDeps.add(runtime);
+            final Dependency deployment = new Dependency();
+            deployment.setGroupId(extCoords.getGroupId());
+            deployment.setArtifactId(extCoords.getArtifactId() + "-deployment");
+            deployment.setVersion(extCoords.getVersion());
+            managedDeps.add(deployment);
+        }
+        final Path bomFile = getTmpPath(bomCoords);
+        try {
+            ModelUtils.persistModel(bomFile, bomModel);
+        } catch (IOException e) {
+            throw new IllegalStateException("Failed to persist BOM at " + bomFile, e);
+        }
+        install(bomCoords, bomFile);
+
+        // install the JSON descriptor
+        final ArtifactCoords jsonCoords = PlatformArtifacts.ensureCatalogArtifact(bomCoords);
+        final Path jsonFile = getTmpPath(jsonCoords);
+        try {
+            platformCatalog.persist(jsonFile);
+        } catch (IOException e) {
+            throw new IllegalStateException("Failed to persist extension catalog " + jsonFile, e);
+        }
+        install(jsonCoords, jsonFile);
+
+        // install the extensions
+        installExtensionArtifacts(platformCatalog.getExtensions());
+
+        return this;
+    }
+
     private void installExtensionArtifacts(Collection<Extension> extensions) {
         for (Extension e : extensions) {
             Path jarPath = getTmpPath(e.getArtifact());
@@ -234,7 +276,7 @@ public class TestRegistryClientBuilder {
     }
 
     private void configureRegistry(TestRegistryBuilder registry) {
-        registry.configure(getRegistryDir(baseDir, registry.config.getId()));
+        registry.configure(getRegistryDir(baseDir, registry.config.getId()), getResolver());
         config.addRegistry(registry.config);
     }
 
@@ -283,6 +325,17 @@ public class TestRegistryClientBuilder {
          */
         public TestRegistryBuilder external() {
             this.external = true;
+            return this;
+        }
+
+        /**
+         * Enables Maven resolver for platform descriptors that couldn't be resolved by the configured platforms
+         * for this registry.
+         *
+         * @return this instance
+         */
+        public TestRegistryBuilder enableMavenResolver() {
+            this.enableMavenResolver = true;
             return this;
         }
 
@@ -336,6 +389,16 @@ public class TestRegistryClientBuilder {
             return this;
         }
 
+        public TestRegistryBuilder setOffering(String offering) {
+            var extra = config.getExtra();
+            if (extra == null || extra.isEmpty()) {
+                extra = new HashMap<>(1);
+                config.setExtra(extra);
+            }
+            extra.put(Constants.OFFERING, offering);
+            return this;
+        }
+
         public TestRegistryClientBuilder clientBuilder() {
             return parent;
         }
@@ -347,7 +410,7 @@ public class TestRegistryClientBuilder {
             memberCatalogs.add(member);
         }
 
-        private void configure(Path registryDir) {
+        private void configure(Path registryDir, MavenArtifactResolver resolver) {
             if (Files.exists(registryDir)) {
                 if (!Files.isDirectory(registryDir)) {
                     throw new IllegalStateException(registryDir + " exists and is not a directory");
@@ -365,6 +428,11 @@ public class TestRegistryClientBuilder {
                         TestRegistryClient.class.getProtectionDomain().getCodeSource().getLocation().toExternalForm());
                 if (enableMavenResolver) {
                     config.setExtra("enable-maven-resolver", true);
+                    try {
+                        config.setExtra("test-local-maven-repo", resolver.getMavenContext().getLocalRepo());
+                    } catch (BootstrapMavenException e) {
+                        throw new RuntimeException(e);
+                    }
                 }
             }
 
@@ -628,11 +696,7 @@ public class TestRegistryClientBuilder {
             final TestPlatformCatalogMemberBuilder quarkusBom = newMember("quarkus-bom");
             quarkusBom.addExtension("io.quarkus", "quarkus-core", release.getQuarkusCoreVersion());
             Map<String, Object> metadata = quarkusBom.getProjectProperties();
-            metadata.put("maven-plugin-groupId", quarkusBom.extensions.getBom().getGroupId());
-            metadata.put("maven-plugin-artifactId", "quarkus-maven-plugin");
-            metadata.put("maven-plugin-version", quarkusBom.extensions.getBom().getVersion());
-            metadata.put("compiler-plugin-version", "3.8.1");
-            metadata.put("surefire-plugin-version", "3.0.0");
+            setMainPlatformProjectProperties(metadata, quarkusBom.extensions.getBom());
             return quarkusBom;
         }
 
@@ -667,6 +731,26 @@ public class TestRegistryClientBuilder {
             }
             metadata.put("members", members);
         }
+    }
+
+    /**
+     * Initializes basic project metadata for dev tools
+     *
+     * @param catalog platform catalog
+     */
+    public static void initMainPlatformMetadata(ExtensionCatalog catalog) {
+        Map<String, Object> metadata = catalog.getMetadata();
+        Map map = (Map) metadata.computeIfAbsent("project", k -> new HashMap<String, Object>());
+        map = (Map) map.computeIfAbsent("properties", k -> new HashMap<String, Object>());
+        setMainPlatformProjectProperties(map, catalog.getBom());
+    }
+
+    public static void setMainPlatformProjectProperties(Map<String, Object> metadata, ArtifactCoords bomCoords) {
+        metadata.put("maven-plugin-groupId", bomCoords.getGroupId());
+        metadata.put("maven-plugin-artifactId", "quarkus-maven-plugin");
+        metadata.put("maven-plugin-version", bomCoords.getVersion());
+        metadata.put("compiler-plugin-version", "3.8.1");
+        metadata.put("surefire-plugin-version", "3.0.0");
     }
 
     public static class TestPlatformCatalogMemberBuilder {
@@ -751,13 +835,20 @@ public class TestRegistryClientBuilder {
 
         public TestPlatformCatalogMemberBuilder addExtensionWithCodestart(String groupId, String artifactId, String version,
                 String codestart) {
+            return addExtensionWithMetadata(groupId, artifactId, version,
+                    codestart == null ? Map.of()
+                            : Map.of("codestart", Map.of("name", codestart, "languages", List.of("java"))));
+        }
+
+        public TestPlatformCatalogMemberBuilder addExtensionWithMetadata(String groupId, String artifactId, String version,
+                Map<String, Object> metadata) {
             final ArtifactCoords coords = ArtifactCoords.jar(groupId, artifactId, version);
             final Extension.Mutable e = Extension.builder()
                     .setArtifact(coords)
                     .setName(artifactId)
-                    .setOrigins(Collections.singletonList(extensions));
-            if (codestart != null) {
-                e.getMetadata().put("codestart", Map.of("name", codestart, "languages", List.of("java")));
+                    .setOrigins(List.of(extensions));
+            if (metadata != null) {
+                e.getMetadata().putAll(metadata);
             }
             extensions.addExtension(e);
 
@@ -994,7 +1085,7 @@ public class TestRegistryClientBuilder {
         pom.setGroupId(coords.getGroupId());
         pom.setArtifactId(coords.getArtifactId());
         pom.setVersion(coords.getVersion());
-        pom.setPackaging("pom");
+        pom.setPackaging(ArtifactCoords.TYPE_POM);
         pom.setDependencyManagement(new DependencyManagement());
 
         final Dependency d = new Dependency();
