@@ -20,9 +20,11 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
@@ -33,6 +35,7 @@ import java.util.zip.ZipOutputStream;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.maven.shared.invoker.MavenInvocationException;
+import org.eclipse.microprofile.config.ConfigProvider;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -41,6 +44,7 @@ import org.junit.jupiter.api.condition.OS;
 
 import io.quarkus.bootstrap.model.CapabilityErrors;
 import io.quarkus.devui.tests.DevUIJsonRPCTest;
+import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.maven.it.continuoustesting.ContinuousTestingMavenTestUtils;
 import io.quarkus.maven.it.verifier.MavenProcessInvocationResult;
 import io.quarkus.maven.it.verifier.RunningInvoker;
@@ -510,7 +514,7 @@ public class DevMojoIT extends LaunchMojoTestBase {
         }
         Files.copy(pom.toPath(), alternatePom.toPath());
         // Now edit the pom.xml to trigger the dev mode restart
-        filter(alternatePom, Collections.singletonMap("<!-- insert test dependencies here -->",
+        filter(alternatePom, Map.of("<!-- insert test dependencies here -->",
                 "        <dependency>\n" +
                         "            <groupId>io.quarkus</groupId>\n" +
                         "            <artifactId>quarkus-smallrye-openapi</artifactId>\n" +
@@ -574,6 +578,68 @@ public class DevMojoIT extends LaunchMojoTestBase {
             }
         }
         return artifacts;
+    }
+
+    @Test
+    public void testPomReload() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/project-with-extension", "projects/pom-reload");
+
+        // add the extra dependency to the application module
+        filter(new File(testDir, "runner/pom.xml"), Map.of(
+                "<!-- begin comment", "<!-- begin comment -->",
+                "end comment -->", "<!-- end comment -->"));
+
+        // launch the application
+        run(false);
+
+        var localDeps = parseArtifactCoords(devModeClient.getHttpResponse("/app/hello/local-modules"));
+        assertThat(localDeps).containsExactlyInAnyOrder(
+                ArtifactCoords.jar("org.acme.extra", "acme-extra", "1.0-SNAPSHOT"),
+                ArtifactCoords.jar("org.acme", "acme-common-transitive", "1.0-SNAPSHOT"),
+                ArtifactCoords.jar("org.acme", "acme-common", "1.0-SNAPSHOT"),
+                ArtifactCoords.jar("org.acme", "acme-library", "1.0-SNAPSHOT"),
+                ArtifactCoords.jar("org.acme", "acme-quarkus-ext-deployment", "1.0-SNAPSHOT"),
+                ArtifactCoords.jar("org.acme", "acme-quarkus-ext", "1.0-SNAPSHOT"));
+
+        // remove the extra dependency from the application module
+        filter(new File(testDir, "runner/pom.xml"), Map.of(
+                "<!-- begin comment -->", "<!-- begin comment",
+                "<!-- end comment -->", "end comment -->"));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> {
+                    final String response = devModeClient.getHttpResponse("/app/hello/local-modules");
+                    System.out.println("local-modules: " + response);
+                    return !response.contains("acme-extra");
+                });
+
+        // add the extra dependency to a dependency module
+        filter(new File(testDir, "library/pom.xml"), Map.of(
+                "<!-- begin comment", "<!-- begin comment -->",
+                "end comment -->", "<!-- end comment -->"));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> {
+                    final String response = devModeClient.getHttpResponse("/app/hello/local-modules");
+                    System.out.println("local-modules: " + response);
+                    return response.contains("acme-extra");
+                });
+    }
+
+    private static Set<ArtifactCoords> parseArtifactCoords(String s) {
+        if (s.charAt(0) == '[' && s.charAt(s.length() - 1) == ']') {
+            s = s.substring(1, s.length() - 1);
+        }
+        var arr = s.split(",");
+        final Set<ArtifactCoords> result = new HashSet<>(arr.length);
+        for (var i : arr) {
+            result.add(ArtifactCoords.fromString(i.trim()));
+        }
+        return result;
     }
 
     @Test
@@ -1211,7 +1277,7 @@ public class DevMojoIT extends LaunchMojoTestBase {
 
     @Test
     public void testThatApplicationRecoversStartupIssue() throws MavenInvocationException, IOException {
-        testDir = initProject("projects/classic", "projects/project-classic-run-startup-issue");
+        testDir = initProject("projects/classic-resteasy", "projects/project-classic-recover-startup-issue");
 
         // Edit the JAX-RS resource to be package private
         File source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
@@ -1616,6 +1682,105 @@ public class DevMojoIT extends LaunchMojoTestBase {
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
                 .until(() -> devModeClient.getHttpResponse("/hello").contains("BONJOUR!"));
+    }
+
+    /**
+     * Same test as @{link testExternalReloadableArtifacts} but the external JAR is outside the project directory.
+     */
+    @Test
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "Installing the library again is failing on Windows, probably because the jar is accessed by the dev mode process")
+    public void testReloadableArtifactsOutsideProjectDirectory() throws Exception {
+        final String rootProjectPath = "projects/external-reloadable-artifacts-with-external-lib";
+        final String externalJarPath = "projects/external-lib";
+
+        // Set up the external project
+        final File externalJarDir = initProject(externalJarPath);
+
+        // Clean and install the external JAR in local repository (.m2)
+        install(externalJarDir, true);
+
+        // Set up the main project that uses the external dependency
+        this.testDir = initProject(rootProjectPath);
+
+        String localRepository = ConfigProvider.getConfig().getOptionalValue("maven.repo.local", String.class)
+                .orElseThrow(() -> new AssertionError("maven.repo.local is not set"));
+
+        // Run quarkus:dev process
+        run(true, "-DwatchedFiles=" + localRepository
+                + "/org/acme/lib/external/acme-lib-external/1.0-SNAPSHOT/acme-lib-external-1.0-SNAPSHOT.jar");
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Hello"));
+
+        final File greetingJava = externalJarDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme").resolve("lib")
+                .resolve("Greeting.java").toFile();
+        assertThat(greetingJava).exists();
+
+        // Uncomment the method ahoj() in Greeting.java
+        filter(greetingJava, Map.of("/*", "", "*/", ""));
+        install(externalJarDir, false);
+
+        // Wait for the app to restart because of the external file change
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Hello"));
+
+        final File greetingResourceJava = this.testDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme")
+                .resolve("GreetingResource.java").toFile();
+        assertThat(greetingResourceJava).exists();
+
+        // Update the GreetingResource.java to call the Greeting.ahoj() method
+        final String greetingAhojCall = "Greeting.ahoj()";
+        filter(greetingResourceJava, Map.of("Greeting.hello()", greetingAhojCall));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Ahoj"));
+
+        // Change ahoj() method content in Greeting.java
+        filter(greetingJava, Map.of("Ahoj", "Ahoj!"));
+        install(externalJarDir, false);
+
+        // Wait for the app to restart because of the external file change
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Ahoj!"));
+
+        // Change GreetingResource.java endpoint response to upper case letters
+        filter(greetingResourceJava, Map.of(greetingAhojCall, greetingAhojCall.concat(".toUpperCase()")));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("AHOJ!"));
+    }
+
+    @Test
+    public void testResteasyReactiveExternalArtifact() throws Exception {
+        final String rootProjectPath = "projects/rr-external-artifacts";
+
+        // Set up the external project
+        final File externalJarDir = initProject(rootProjectPath + "/external-lib");
+
+        // Clean and install the external JAR in local repository (.m2)
+        install(externalJarDir, true);
+
+        // Set up the main project that uses the external dependency
+        this.testDir = initProject(rootProjectPath + "/app");
+
+        // Run quarkus:dev process
+        run(true);
+
+        Assertions.assertEquals("Quarkus", devModeClient.getHttpResponse("/hello/Quarkus"));
+        Assertions.assertEquals("OK", devModeClient.getHttpResponse("/hello/parameterized-type-external"));
+        Assertions.assertEquals("Hello from Quarkus REST", devModeClient.getHttpResponse("/greet"));
     }
 
     @Test
